# cv-estimator

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
cv_estimator/: __init__.py  config.py  llm.py  models.py  pipeline.py
cv_estimator/data/: ispv_2025.csv  platycz_2025.csv  regional_multipliers_2025.csv
cv_estimator/explanation/: match_assess.py  narrative.py  roadmap.py
cv_estimator/extractors/: document.py  explicit.py  inferred.py
cv_estimator/prompts/: extract_explicit.md  extract_inferred.md  match_assess.md  roadmap.md  role_to_cz_isco.md  skills_coverage.md  skills_coverage_nontech.md  strengths_gaps.md
cv_estimator/salary/: lookup.py  market_postings.py  platycz.py  region.py  role_mapping.py
cv_estimator/scoring/: components.py  seniority.py
cv_estimator/ui/: app.py
cv_estimator/validation/: sanity.py
data/: ispv_2024.csv  ispv_2025.csv
scripts/: generate_synthetic_cvs.py  prepare_ispv_data.py  prepare_platycz_data.py  run_analysis.py
tests/: conftest.py  test_extractors.py  test_pipeline_e2e.py  test_salary.py  test_scoring.py
