[project]
name = "cv-estimator"
version = "0.1.0"
description = "AI-powered CV fit & salary estimator"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Martin" }]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["cv_estimator*"]

[tool.setuptools.package-data]
cv_estimator = ["prompts/*.md", "data/*.csv"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
